Fix some image and title of webpage spacing
Used some problem solving to get the image and title
placed in the center of the webpage.

--- a/styles.css
+++ b/styles.css
@@ -8,10 +8,13 @@
     text-align: center;
 }
 .button {
-    background-color: rgb(255, 247, 171);
+    background-color: rgb(0, 196, 69);
     color: black;
 }
 div.image {
     display: flex;
     justify-content: center;
+}
+.homepage {
+    text-align: center;
 }
